--- a/tutorials/5_publication/tutorial.Rmd
+++ b/tutorials/5_publication/tutorial.Rmd
@@ -20,6 +20,8 @@ if(!require("patchwork")) install.packages("patchwork")
 if(!require("ggrepel")) install.packages("ggrepel")
 if(!require("viridis")) install.packages("viridis")
 if(!require("scales")) install.packages("scales")
+if(!require("showtext")) install.packages("showtext")
+if(!require("sysfonts")) install.packages("sysfonts")
 ```
 
 ```{r setup, include=FALSE}
@@ -31,6 +33,13 @@ library(patchwork)
 library(ggrepel)
 library(viridis)
 library(scales)
+library(showtext)
+library(sysfonts)
+
+# 한글 폰트 설정 (Google Fonts에서 Noto Sans KR 사용)
+font_add_google("Noto Sans KR", "NotoSansKR")
+showtext_auto()
+theme_set(theme_minimal(base_family = "NotoSansKR"))
 
 # 샘플 데이터 생성
 set.seed(42)
